Dashboard re-aligned, text no longer red

--- a/accountmanager/dashboard.css
+++ b/accountmanager/dashboard.css
@@ -12926,7 +12926,7 @@ body.sidebar-toggled footer.sticky-footer {
 .userTickets {
     max-height: inherit;
     font-weight: bold;
-    color: orangered;
+    
 }
 
 #publicTicketsDiv {
